--- a/src/css/output.css
+++ b/src/css/output.css
@@ -763,10 +763,6 @@ select{
   margin: -0.25rem;
 }
 
-.m-auto{
-  margin: auto;
-}
-
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -785,11 +781,6 @@ select{
 .my-1{
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
-}
-
-.my-auto{
-  margin-top: auto;
-  margin-bottom: auto;
 }
 
 .mr-2{
@@ -820,20 +811,8 @@ select{
   margin-bottom: 0.5rem;
 }
 
-.mt-6{
-  margin-top: 1.5rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
-}
-
-.mt-8{
-  margin-top: 2rem;
+.mt-48{
+  margin-top: 12rem;
 }
 
 .ml-20{
@@ -846,6 +825,10 @@ select{
 
 .mr-8{
   margin-right: 2rem;
+}
+
+.mt-36{
+  margin-top: 9rem;
 }
 
 .ml-3{
@@ -864,24 +847,16 @@ select{
   margin-right: 0.75rem;
 }
 
+.mt-6{
+  margin-top: 1.5rem;
+}
+
 .ml-8{
   margin-left: 2rem;
 }
 
-.mt-72{
-  margin-top: 18rem;
-}
-
-.mt-16{
-  margin-top: 4rem;
-}
-
-.mt-24{
-  margin-top: 6rem;
-}
-
-.mt-36{
-  margin-top: 9rem;
+.mt-64{
+  margin-top: 16rem;
 }
 
 .block{
@@ -912,10 +887,6 @@ select{
   display: none;
 }
 
-.h-5{
-  height: 1.25rem;
-}
-
 .h-4{
   height: 1rem;
 }
@@ -932,16 +903,12 @@ select{
   height: 2.25rem;
 }
 
-.min-h-screen{
-  min-height: 100vh;
-}
-
 .w-full{
   width: 100%;
 }
 
-.w-5{
-  width: 1.25rem;
+.w-\[30\%\]{
+  width: 30%;
 }
 
 .w-4{
@@ -960,54 +927,6 @@ select{
   width: 2.25rem;
 }
 
-.w-24{
-  width: 6rem;
-}
-
-.w-72{
-  width: 18rem;
-}
-
-.w-96{
-  width: 24rem;
-}
-
-.w-\[\]{
-  width: ;
-}
-
-.w-\[80\]{
-  width: 80;
-}
-
-.w-\[80\%\]{
-  width: 80%;
-}
-
-.w-\[70\]{
-  width: 70;
-}
-
-.w-\[70\%\]{
-  width: 70%;
-}
-
-.w-\[60\%\]{
-  width: 60%;
-}
-
-.w-\[50\%\]{
-  width: 50%;
-}
-
-.w-\[40\%\]{
-  width: 40%;
-}
-
-.w-\[30\%\]{
-  width: 30%;
-}
-
 .min-w-36{
   min-width: 9rem;
 }
@@ -1018,14 +937,6 @@ select{
 
 .min-w-80{
   min-width: 20rem;
-}
-
-.min-w-\[\]{
-  min-width: ;
-}
-
-.min-w-\[50\%\]{
-  min-width: 50%;
 }
 
 .max-w-md{
@@ -1121,11 +1032,6 @@ select{
   gap: 1.5rem;
 }
 
-.gap-x-2{
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
-}
-
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
@@ -1187,10 +1093,6 @@ select{
   border-width: 1px;
 }
 
-.border-t{
-  border-top-width: 1px;
-}
-
 .border-l{
   border-left-width: 1px;
 }
@@ -1202,11 +1104,6 @@ select{
 .border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
-.border-gray-600{
-  --tw-border-opacity: 1;
-  border-color: rgb(75 85 99 / var(--tw-border-opacity));
 }
 
 .border-white{
@@ -1274,11 +1171,6 @@ select{
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
-.bg-purple-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(126 34 206 / var(--tw-bg-opacity));
-}
-
 .bg-slate-800{
   --tw-bg-opacity: 1;
   background-color: rgb(30 41 59 / var(--tw-bg-opacity));
@@ -1314,12 +1206,12 @@ select{
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
-.fill-current{
-  fill: currentColor;
-}
-
 .fill-gray-300{
   fill: #d1d5db;
+}
+
+.fill-current{
+  fill: currentColor;
 }
 
 .p-8{
@@ -1328,10 +1220,6 @@ select{
 
 .p-2{
   padding: 0.5rem;
-}
-
-.p-6{
-  padding: 1.5rem;
 }
 
 .p-3{
@@ -1442,15 +1330,15 @@ select{
   letter-spacing: -0.01em;
 }
 
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1.5;
-}
-
 .text-base{
   font-size: 1rem;
   line-height: 1.5;
   letter-spacing: -0.01em;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1.5;
 }
 
 .font-bold{
@@ -1465,10 +1353,6 @@ select{
   font-weight: 500;
 }
 
-.font-light{
-  font-weight: 300;
-}
-
 .uppercase{
   text-transform: uppercase;
 }
@@ -1480,10 +1364,6 @@ select{
 .tabular-nums{
   --tw-numeric-spacing: tabular-nums;
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
-}
-
-.tracking-wide{
-  letter-spacing: 0.025em;
 }
 
 .text-slate-600{
@@ -1504,21 +1384,6 @@ select{
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.text-purple-700{
-  --tw-text-opacity: 1;
-  color: rgb(126 34 206 / var(--tw-text-opacity));
-}
-
-.text-gray-800{
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
-.text-purple-600{
-  --tw-text-opacity: 1;
-  color: rgb(147 51 234 / var(--tw-text-opacity));
 }
 
 .text-gray-300{
@@ -1613,26 +1478,20 @@ select{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.08), 0 10px 10px -5px rgba(0, 0, 0, 0.01);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 10px 10px -5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.08), 0 4px 6px -2px rgba(0, 0, 0, 0.01);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.filter{
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.transition-colors{
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition{
@@ -1663,11 +1522,6 @@ select{
 .hover\:bg-blue-600:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-purple-600:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-slate-50:hover{
@@ -1719,49 +1573,9 @@ select{
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
 }
 
-.focus\:border-purple-400:focus{
-  --tw-border-opacity: 1;
-  border-color: rgb(192 132 252 / var(--tw-border-opacity));
-}
-
-.focus\:bg-purple-600:focus{
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
-}
-
 .focus\:outline-none:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
-}
-
-.focus\:ring:focus{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-2:focus{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-purple-300:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(216 180 254 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-violet-600:focus{
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(124 58 237 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-opacity-40:focus{
-  --tw-ring-opacity: 0.4;
-}
-
-.focus\:ring-offset-1:focus{
-  --tw-ring-offset-width: 1px;
 }
 
 .group:hover .group-hover\:text-slate-800{
@@ -1798,12 +1612,6 @@ select{
 
   .md\:rounded{
     border-radius: 0.25rem;
-  }
-}
-
-@media (min-width: 1024px){
-  .lg\:max-w-xl{
-    max-width: 36rem;
   }
 }
 
